# nudge-me-after-work

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: auth.py  config.py  csrf.py  db.py  diagnostics.py  main.py  models.py  notifier.py  scheduler.py  templating.py
app/routers/: history.py  rules.py  webhooks.py
app/services/: __init__.py  history.py  sessions.py
app/static/: style.css
app/templates/: base.html  history.html  macros.html  rule_form.html  rules_list.html
nginx/conf.d/: nudge.conf
tests/: test_config.py  test_f02_db.py  test_f05_sessions.py  test_f06_scheduler.py  test_f07_history.py  test_f08_auth.py
